--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
           <form id="inputForm">
             <div class="input-group">
               <label>Enter a task to do!</label>
-              <input type="text" id="userInput" class="form-control">
+              <input type="text" id="userTask" class="form-control">
             </div>
             <div class="input-group">
               <label>Name</label>
-              <input type="text" id="userInput" class="form-control">
+              <input type="text" id="userName" class="form-control">
             </div>
             <div class="input-group">
               <label>Time</label>
-              <input type="text" id="userInput" class="form-control">
+              <input type="text" id="userTime" class="form-control">
             </div>
             <button type="submit" class="btn btn-primary">Enter</button>
           </form>
@@ -33,8 +33,19 @@
           <div class="input-group">
             <ul id="output"></ul>
           </div>
-          <button type='button' id="deleteButton">Delete</button>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <div id="show-chore">
+            <p>Chore: <span class="choreSpan"></span></p>
+            <p>Name: <span class="nameSpan"></span></p>
+            <p>Time: <span class="timeSpan"></span></p>
+          </div>
+        </div>
+        <div class="col-md-2"></div>
+
       </div>
     </div>
   </body>
